fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@ section {
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin-bottom: 50%;
+    margin-bottom: 15%;
 }
 
 h2 {
@@ -246,7 +246,7 @@ h2 {
     background-color: #f4f4f4;
     position: relative;
     overflow: visible;
-    margin-bottom: 100%;
+    margin-bottom: 15%;
 }
 
 .word-map-container {
@@ -308,7 +308,7 @@ h2 {
     text-align: left;
     color: #333;
     transition: transform 0.3s ease-in-out;
-    margin-bottom: 75%;
+    margin-bottom: 15%;
 }
 
 .about-content:hover {
